# Latte-compiler

./: Cargo.toml  Makefile  Readme.md  build.rs  env  install.sh
lib/: runtime.asm  runtime.s
src/: error_handling.rs  latc.rs  latc_llvm.rs  lib.rs
src/backend/: assembler_transformer.rs  lcse_optimizer.rs  mod.rs  quadruple_code_transformer.rs
src/frontend/: class_analyser.rs  function_analyser.rs  global_analyser.rs  mod.rs  simplifier.rs  string_mapper.rs
src/model/: assembler.rs  ast.rs  mod.rs  quadruple_code.rs
src/parser/: instant.lalrpop  mod.rs
